src/moove.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: /* empty */
    3      | stmts stmt

    4 stmt: tIF '(' expr ')' stmts elseifs else_block tENDIF

    5 @1: /* empty */

    6 stmt: tWHILE opt_id '(' expr ')' @1 stmts tENDWHILE

    7 @2: /* empty */

    8 stmt: tFOR tID tIN '(' expr ')' @2 stmts tENDFOR

    9 @3: /* empty */

   10 stmt: tFOR tID tIN '[' expr tTO expr ']' @3 stmts tENDFOR
   11     | tTRY stmts excepts tENDTRY
   12     | tTRY stmts tFINALLY stmts tENDTRY

   13 @4: /* empty */

   14 stmt: tFORK opt_id '(' expr ')' @4 stmts tENDFORK

   15 @5: /* empty */

   16 stmt: tSWITCH '(' expr ')' @5 switch_cases tENDSWITCH
   17     | tRETURN ';'
   18     | tRETURN expr ';'
   19     | tCONTINUE opt_id ';'
   20     | tBREAK opt_id ';'
   21     | expr ';'
   22     | ';'

   23 elseifs: /* empty */
   24        | elseifs tELSEIF '(' expr ')' stmts

   25 else_block: /* empty */
   26           | tELSE stmts

   27 opt_id: /* empty */
   28       | tID

   29 excepts: tEXCEPT opt_id '(' except_codes ')' stmts
   30        | excepts tEXCEPT opt_id '(' except_codes ')' stmts

   31 except_codes: tANY
   32             | ne_arglist

   33 switch_cases: /* empty */
   34             | switch_cases tCASE '(' expr ')' stmts

   35 @6: /* empty */

   36 switch_cases: switch_cases tDEFAULT @6 stmts

   37 arglist: /* empty */
   38        | ne_arglist

   39 ne_arglist: argument
   40           | ne_arglist ',' argument

   41 argument: expr
   42         | '@' expr

   43 expr: tINT
   44     | tOBJNUM
   45     | tSTR
   46     | tREAL
   47     | '{' arglist '}'
   48     | tID
   49     | '!' expr
   50     | '-' expr
   51     | tINCREMENT expr
   52     | tDECREMENT expr
   53     | expr tINCREMENT
   54     | expr tDECREMENT
   55     | expr '=' expr
   56     | '{' scatter '}' '=' expr
   57     | expr tOR expr
   58     | expr tAND expr
   59     | expr tEQ expr
   60     | expr tNE expr
   61     | expr '<' expr
   62     | expr tLE expr
   63     | expr '>' expr
   64     | expr tGE expr
   65     | expr tIN expr
   66     | expr '+' expr
   67     | expr '-' expr
   68     | expr '*' expr
   69     | expr '/' expr
   70     | expr '%' expr
   71     | expr '^' expr
   72     | expr tADD_EQ expr
   73     | expr tSUB_EQ expr
   74     | expr tMUL_EQ expr
   75     | expr tDIV_EQ expr
   76     | expr tMOD_EQ expr
   77     | expr tEXP_EQ expr
   78     | expr '?' expr '|' expr
   79     | expr '.' tID
   80     | expr '.' '(' expr ')'
   81     | expr ':' tID '(' arglist ')'
   82     | expr ':' '(' expr ')' '(' arglist ')'
   83     | expr '[' dollars_up expr ']'
   84     | expr '[' dollars_up expr tTO expr ']'
   85     | '$'
   86     | '$' tID
   87     | '$' tID '(' arglist ')'
   88     | tID '(' arglist ')'
   89     | '`' expr '!' except_codes catch_result '''
   90     | '(' expr ')'

   91 scatter: opt_target
   92        | scatter ',' opt_target
   93        | scatter ',' tID
   94        | scatter ',' '@' tID
   95        | ne_arglist ',' opt_target

   96 opt_target: '?' tID
   97           | '?' tID '=' expr

   98 dollars_up: /* empty */

   99 catch_result: /* empty */
  100             | tARROW expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 49 89
'$' (36) 85 86 87
'%' (37) 70
''' (39) 89
'(' (40) 4 6 8 14 16 24 29 30 34 80 81 82 87 88 90
')' (41) 4 6 8 14 16 24 29 30 34 80 81 82 87 88 90
'*' (42) 68
'+' (43) 66
',' (44) 40 92 93 94 95
'-' (45) 50 67
'.' (46) 79 80
'/' (47) 69
':' (58) 81 82
';' (59) 17 18 19 20 21 22
'<' (60) 61
'=' (61) 55 56 97
'>' (62) 63
'?' (63) 78 96 97
'@' (64) 42 94
'[' (91) 10 83 84
']' (93) 10 83 84
'^' (94) 71
'`' (96) 89
'{' (123) 47 56
'|' (124) 78
'}' (125) 47 56
error (256)
tINT (258) 43
tOBJNUM (259) 44
tSTR (260) 45
tID (261) 8 10 28 48 79 81 86 87 88 93 94 96 97
tREAL (262) 46
tIF (263) 4
tELSEIF (264) 24
tELSE (265) 26
tENDIF (266) 4
tWHILE (267) 6
tENDWHILE (268) 6
tFOR (269) 8 10
tENDFOR (270) 8 10
tFORK (271) 14
tENDFORK (272) 14
tTRY (273) 11 12
tEXCEPT (274) 29 30
tFINALLY (275) 12
tENDTRY (276) 11 12
tSWITCH (277) 16
tCASE (278) 34
tDEFAULT (279) 36
tENDSWITCH (280) 16
tRETURN (281) 17 18
tCONTINUE (282) 19
tBREAK (283) 20
tANY (284) 31
tTO (285) 10 84
tARROW (286) 100
tIN (287) 8 10 65
tEXP_EQ (288) 77
tMOD_EQ (289) 76
tDIV_EQ (290) 75
tMUL_EQ (291) 74
tSUB_EQ (292) 73
tADD_EQ (293) 72
tAND (294) 58
tOR (295) 57
tGE (296) 64
tLE (297) 62
tNE (298) 60
tEQ (299) 59
tDECREMENT (300) 52 54
tINCREMENT (301) 51 53
tNEGATE (302)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
program (75)
    on left: 1, on right: 0
stmts (76)
    on left: 2 3, on right: 1 3 4 6 8 10 11 12 14 24 26 29 30 34 36
stmt (77)
    on left: 4 6 8 10 11 12 14 16 17 18 19 20 21 22,
    on right: 3
@1 (78)
    on left: 5, on right: 6
@2 (79)
    on left: 7, on right: 8
@3 (80)
    on left: 9, on right: 10
@4 (81)
    on left: 13, on right: 14
@5 (82)
    on left: 15, on right: 16
elseifs (83)
    on left: 23 24, on right: 4 24
else_block (84)
    on left: 25 26, on right: 4
opt_id (85)
    on left: 27 28, on right: 6 14 19 20 29 30
excepts (86)
    on left: 29 30, on right: 11 30
except_codes (87)
    on left: 31 32, on right: 29 30 89
switch_cases (88)
    on left: 33 34 36, on right: 16 34 36
@6 (89)
    on left: 35, on right: 36
arglist (90)
    on left: 37 38, on right: 47 81 82 87 88
ne_arglist (91)
    on left: 39 40, on right: 32 38 40 95
argument (92)
    on left: 41 42, on right: 39 40
expr (93)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88 89 90, on right: 4 6 8 10 14 16 18 21 24 34
    41 42 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 89 90 97 100
scatter (94)
    on left: 91 92 93 94 95, on right: 56 92 93 94
opt_target (95)
    on left: 96 97, on right: 91 92 95
dollars_up (96)
    on left: 98, on right: 83 84
catch_result (97)
    on left: 99 100, on right: 89


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (stmts)

    program  go to state 1
    stmts    go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: stmts .
    3 stmts: stmts . stmt

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    tIF         shift, and go to state 9
    tWHILE      shift, and go to state 10
    tFOR        shift, and go to state 11
    tFORK       shift, and go to state 12
    tTRY        shift, and go to state 13
    tSWITCH     shift, and go to state 14
    tRETURN     shift, and go to state 15
    tCONTINUE   shift, and go to state 16
    tBREAK      shift, and go to state 17
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    ';'         shift, and go to state 24
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    $default  reduce using rule 1 (program)

    stmt  go to state 27
    expr  go to state 28


state 3

    0 $accept: program $end .

    $default  accept


state 4

   43 expr: tINT .

    $default  reduce using rule 43 (expr)


state 5

   44 expr: tOBJNUM .

    $default  reduce using rule 44 (expr)


state 6

   45 expr: tSTR .

    $default  reduce using rule 45 (expr)


state 7

   48 expr: tID .
   88     | tID . '(' arglist ')'

    '('  shift, and go to state 29

    $default  reduce using rule 48 (expr)


state 8

   46 expr: tREAL .

    $default  reduce using rule 46 (expr)


state 9

    4 stmt: tIF . '(' expr ')' stmts elseifs else_block tENDIF

    '('  shift, and go to state 30


state 10

    6 stmt: tWHILE . opt_id '(' expr ')' @1 stmts tENDWHILE

    tID  shift, and go to state 31

    $default  reduce using rule 27 (opt_id)

    opt_id  go to state 32


state 11

    8 stmt: tFOR . tID tIN '(' expr ')' @2 stmts tENDFOR
   10     | tFOR . tID tIN '[' expr tTO expr ']' @3 stmts tENDFOR

    tID  shift, and go to state 33


state 12

   14 stmt: tFORK . opt_id '(' expr ')' @4 stmts tENDFORK

    tID  shift, and go to state 31

    $default  reduce using rule 27 (opt_id)

    opt_id  go to state 34


state 13

   11 stmt: tTRY . stmts excepts tENDTRY
   12     | tTRY . stmts tFINALLY stmts tENDTRY

    $default  reduce using rule 2 (stmts)

    stmts  go to state 35


state 14

   16 stmt: tSWITCH . '(' expr ')' @5 switch_cases tENDSWITCH

    '('  shift, and go to state 36


state 15

   17 stmt: tRETURN . ';'
   18     | tRETURN . expr ';'

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    ';'         shift, and go to state 37
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 38


state 16

   19 stmt: tCONTINUE . opt_id ';'

    tID  shift, and go to state 31

    $default  reduce using rule 27 (opt_id)

    opt_id  go to state 39


state 17

   20 stmt: tBREAK . opt_id ';'

    tID  shift, and go to state 31

    $default  reduce using rule 27 (opt_id)

    opt_id  go to state 40


state 18

   50 expr: '-' . expr

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 41


state 19

   49 expr: '!' . expr

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 42


state 20

   52 expr: tDECREMENT . expr

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 43


state 21

   51 expr: tINCREMENT . expr

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 44


state 22

   85 expr: '$' .
   86     | '$' . tID
   87     | '$' . tID '(' arglist ')'

    tID  shift, and go to state 45

    $default  reduce using rule 85 (expr)


state 23

   90 expr: '(' . expr ')'

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 46


state 24

   22 stmt: ';' .

    $default  reduce using rule 22 (stmt)


state 25

   47 expr: '{' . arglist '}'
   56     | '{' . scatter '}' '=' expr

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '?'         shift, and go to state 47
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '@'         shift, and go to state 48
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    $default  reduce using rule 37 (arglist)

    arglist     go to state 49
    ne_arglist  go to state 50
    argument    go to state 51
    expr        go to state 52
    scatter     go to state 53
    opt_target  go to state 54


state 26

   89 expr: '`' . expr '!' except_codes catch_result '''

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 55


state 27

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


state 28

   21 stmt: expr . ';'
   53 expr: expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'

    tIN         shift, and go to state 56
    '='         shift, and go to state 57
    tEXP_EQ     shift, and go to state 58
    tMOD_EQ     shift, and go to state 59
    tDIV_EQ     shift, and go to state 60
    tMUL_EQ     shift, and go to state 61
    tSUB_EQ     shift, and go to state 62
    tADD_EQ     shift, and go to state 63
    '?'         shift, and go to state 64
    tAND        shift, and go to state 65
    tOR         shift, and go to state 66
    '<'         shift, and go to state 67
    '>'         shift, and go to state 68
    tGE         shift, and go to state 69
    tLE         shift, and go to state 70
    tNE         shift, and go to state 71
    tEQ         shift, and go to state 72
    '+'         shift, and go to state 73
    '-'         shift, and go to state 74
    '*'         shift, and go to state 75
    '/'         shift, and go to state 76
    '%'         shift, and go to state 77
    '^'         shift, and go to state 78
    tDECREMENT  shift, and go to state 79
    tINCREMENT  shift, and go to state 80
    '.'         shift, and go to state 81
    ':'         shift, and go to state 82
    '['         shift, and go to state 83
    ';'         shift, and go to state 84


state 29

   88 expr: tID '(' . arglist ')'

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '@'         shift, and go to state 48
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    $default  reduce using rule 37 (arglist)

    arglist     go to state 85
    ne_arglist  go to state 86
    argument    go to state 51
    expr        go to state 52


state 30

    4 stmt: tIF '(' . expr ')' stmts elseifs else_block tENDIF

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 87


state 31

   28 opt_id: tID .

    $default  reduce using rule 28 (opt_id)


state 32

    6 stmt: tWHILE opt_id . '(' expr ')' @1 stmts tENDWHILE

    '('  shift, and go to state 88


state 33

    8 stmt: tFOR tID . tIN '(' expr ')' @2 stmts tENDFOR
   10     | tFOR tID . tIN '[' expr tTO expr ']' @3 stmts tENDFOR

    tIN  shift, and go to state 89


state 34

   14 stmt: tFORK opt_id . '(' expr ')' @4 stmts tENDFORK

    '('  shift, and go to state 90


state 35

    3 stmts: stmts . stmt
   11 stmt: tTRY stmts . excepts tENDTRY
   12     | tTRY stmts . tFINALLY stmts tENDTRY

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    tIF         shift, and go to state 9
    tWHILE      shift, and go to state 10
    tFOR        shift, and go to state 11
    tFORK       shift, and go to state 12
    tTRY        shift, and go to state 13
    tEXCEPT     shift, and go to state 91
    tFINALLY    shift, and go to state 92
    tSWITCH     shift, and go to state 14
    tRETURN     shift, and go to state 15
    tCONTINUE   shift, and go to state 16
    tBREAK      shift, and go to state 17
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    ';'         shift, and go to state 24
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    stmt     go to state 27
    excepts  go to state 93
    expr     go to state 28


state 36

   16 stmt: tSWITCH '(' . expr ')' @5 switch_cases tENDSWITCH

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 94


state 37

   17 stmt: tRETURN ';' .

    $default  reduce using rule 17 (stmt)


state 38

   18 stmt: tRETURN expr . ';'
   53 expr: expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'

    tIN         shift, and go to state 56
    '='         shift, and go to state 57
    tEXP_EQ     shift, and go to state 58
    tMOD_EQ     shift, and go to state 59
    tDIV_EQ     shift, and go to state 60
    tMUL_EQ     shift, and go to state 61
    tSUB_EQ     shift, and go to state 62
    tADD_EQ     shift, and go to state 63
    '?'         shift, and go to state 64
    tAND        shift, and go to state 65
    tOR         shift, and go to state 66
    '<'         shift, and go to state 67
    '>'         shift, and go to state 68
    tGE         shift, and go to state 69
    tLE         shift, and go to state 70
    tNE         shift, and go to state 71
    tEQ         shift, and go to state 72
    '+'         shift, and go to state 73
    '-'         shift, and go to state 74
    '*'         shift, and go to state 75
    '/'         shift, and go to state 76
    '%'         shift, and go to state 77
    '^'         shift, and go to state 78
    tDECREMENT  shift, and go to state 79
    tINCREMENT  shift, and go to state 80
    '.'         shift, and go to state 81
    ':'         shift, and go to state 82
    '['         shift, and go to state 83
    ';'         shift, and go to state 95


state 39

   19 stmt: tCONTINUE opt_id . ';'

    ';'  shift, and go to state 96


state 40

   20 stmt: tBREAK opt_id . ';'

    ';'  shift, and go to state 97


state 41

   50 expr: '-' expr .
   53     | expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'

    '.'  shift, and go to state 81
    ':'  shift, and go to state 82
    '['  shift, and go to state 83

    $default  reduce using rule 50 (expr)


state 42

   49 expr: '!' expr .
   53     | expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'

    '.'  shift, and go to state 81
    ':'  shift, and go to state 82
    '['  shift, and go to state 83

    $default  reduce using rule 49 (expr)


state 43

   52 expr: tDECREMENT expr .
   53     | expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'

    '.'  shift, and go to state 81
    ':'  shift, and go to state 82
    '['  shift, and go to state 83

    $default  reduce using rule 52 (expr)


state 44

   51 expr: tINCREMENT expr .
   53     | expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'

    '.'  shift, and go to state 81
    ':'  shift, and go to state 82
    '['  shift, and go to state 83

    $default  reduce using rule 51 (expr)


state 45

   86 expr: '$' tID .
   87     | '$' tID . '(' arglist ')'

    '('  shift, and go to state 98

    $default  reduce using rule 86 (expr)


state 46

   53 expr: expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'
   90     | '(' expr . ')'

    tIN         shift, and go to state 56
    '='         shift, and go to state 57
    tEXP_EQ     shift, and go to state 58
    tMOD_EQ     shift, and go to state 59
    tDIV_EQ     shift, and go to state 60
    tMUL_EQ     shift, and go to state 61
    tSUB_EQ     shift, and go to state 62
    tADD_EQ     shift, and go to state 63
    '?'         shift, and go to state 64
    tAND        shift, and go to state 65
    tOR         shift, and go to state 66
    '<'         shift, and go to state 67
    '>'         shift, and go to state 68
    tGE         shift, and go to state 69
    tLE         shift, and go to state 70
    tNE         shift, and go to state 71
    tEQ         shift, and go to state 72
    '+'         shift, and go to state 73
    '-'         shift, and go to state 74
    '*'         shift, and go to state 75
    '/'         shift, and go to state 76
    '%'         shift, and go to state 77
    '^'         shift, and go to state 78
    tDECREMENT  shift, and go to state 79
    tINCREMENT  shift, and go to state 80
    '.'         shift, and go to state 81
    ':'         shift, and go to state 82
    '['         shift, and go to state 83
    ')'         shift, and go to state 99


state 47

   96 opt_target: '?' . tID
   97           | '?' . tID '=' expr

    tID  shift, and go to state 100


state 48

   42 argument: '@' . expr

    tINT        shift, and go to state 4
    tOBJNUM     shift, and go to state 5
    tSTR        shift, and go to state 6
    tID         shift, and go to state 7
    tREAL       shift, and go to state 8
    '-'         shift, and go to state 18
    '!'         shift, and go to state 19
    tDECREMENT  shift, and go to state 20
    tINCREMENT  shift, and go to state 21
    '$'         shift, and go to state 22
    '('         shift, and go to state 23
    '{'         shift, and go to state 25
    '`'         shift, and go to state 26

    expr  go to state 101


state 49

   47 expr: '{' arglist . '}'

    '}'  shift, and go to state 102


state 50

   38 arglist: ne_arglist .
   40 ne_arglist: ne_arglist . ',' argument
   95 scatter: ne_arglist . ',' opt_target

    ','  shift, and go to state 103

    $default  reduce using rule 38 (arglist)


state 51

   39 ne_arglist: argument .

    $default  reduce using rule 39 (ne_arglist)


state 52

   41 argument: expr .
   53 expr: expr . tINCREMENT
   54     | expr . tDECREMENT
   55     | expr . '=' expr
   57     | expr . tOR expr
   58     | expr . tAND expr
   59     | expr . tEQ expr
   60     | expr . tNE expr
   61     | expr . '<' expr
   62     | expr . tLE expr
   63     | expr . '>' expr
   64     | expr . tGE expr
   65     | expr . tIN expr
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   71     | expr . '^' expr
   72     | expr . tADD_EQ expr
   73     | expr . tSUB_EQ expr
   74     | expr . tMUL_EQ expr
   75     | expr . tDIV_EQ expr
   76     | expr . tMOD_EQ expr
   77     | expr . tEXP_EQ expr
   78     | expr . '?' expr '|' expr
   79     | expr . '.' tID
   80     | expr . '.' '(' expr ')'
   81     | expr . ':' tID '(' arglist ')'
   82     | expr . ':' '(' expr ')' '(' arglist ')'
   83     | expr . '[' dollars_up expr ']'
   84     | expr . '[' dollars_up expr tTO expr ']'
